@@ -724,7 +724,7 @@ class Tag(PageElement):
 
     def __init__(self, parser=None, builder=None, name=None, namespace=None,
                  prefix=None, attrs=None, parent=None, previous=None,
-                 is_xml=None):
+                 is_xml=None, lineno=None, offset=None):
         "Basic constructor."
 
         if parser is None:
@@ -738,6 +738,10 @@ class Tag(PageElement):
         self.name = name
         self.namespace = namespace
         self.prefix = prefix
+        if ((not builder or builder.store_line_numbers)
+            and (lineno is not None or offset is not None)):
+            self.lineno = lineno
+            self.offset = offset
         if attrs is None:
             attrs = {}
         elif attrs:
